2005-10-24   Christian Stimming <stimming@tuhh.de>

	* gwenpp/Makefile.am, plugins/dbio/olddb/Makefile.am,
	plugins/dbio/csv/Makefile.am,
	plugins/crypttoken/ohbci/Makefile.am: Fix broken win32 linker
	arguments in last LIBADD change.

===========================================================================
MARK: released gwenhywfar-1.19.0 (2005/10/22)
===========================================================================


2005/10/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed some bugs in typemaker (regarding "volatile" property)
- applied and extended a patch by Stanislav Brabec (SuSE) which fixes 
  the LIBADDs of the libraries/tools/plugins
- added property "takeOver" to typemaker


2005/10/12: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on typemaker:
  - write_code_fromdbArg_c() no longer handles volatile elements
  - now defining virtual functions is allowed. Typemaker declares the
    type and getter/setter/exec functions (see src/ipc/request/request.xml)
- worked on IPC:
  - undid the latest changes (do not export the internal GWEN_IPCREQUEST
    class)
  - added a new request wrapper class (GWEN_IPC_REQUEST) which uses the
    normal GWEN_IPCMANAGER function calls


2005/10/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on a timing problem in network code


2005/09/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed GWEN_IPCManager_GetNextInRequest: Was not taking the argument "mark"
  into account
- added Request-API to IPC code, which gives the caller more access to the
  IPC requests. Therefore the following functions have been added:
  - GWEN_IPCManager_CreateRequestR()
  - GWEN_IPCManager_DestroyRequestR()
  - GWEN_IPCManager_AttachRequestR()
  - GWEN_IPCManager_SendRequestR()
  - GWEN_IPCManager_SendResponseR()