@@ -2,10 +2,5 @@ INCLUDES=@all_includes@
 
 AM_CFLAGS = -DGWEN_HEADERS=\"$(pkgincludedir)\"
 
-
 bin_PROGRAMS=mklistdoc
-#noinst_HEADERS=args.h
 mklistdoc_SOURCES=mklistdoc.c
-#mklistdoc_LDADD=$(top_builddir)/src/libgwenhywfar.la
-
-
