@@ -4,6 +4,6 @@ bin_PROGRAMS=dlgtest
 #noinst_HEADERS=args.h
 dlgtest_SOURCES=main.c
 dlgtest_LDADD = \
-  $(top_builddir)/src/libgwenhywfar.la \
+  $(top_builddir)/src/$(gwenhywfar_internal_libname) \
   $(top_builddir)/gwenui/libgwenui.la \
   $(PROG_LIBRARIES)
