@@ -24,13 +24,7 @@ gct_tool_SOURCES=\
   disablekey.c \
   main.c
 
-if IS_WINDOWS
-  PROVIDED_GWEN_LIB=$(top_builddir)/src/gwenhywfar32_$(GWENHYWFAR_SO_EFFECTIVE).dll
-else
-  PROVIDED_GWEN_LIB=$(top_builddir)/src/libgwenhywfar.la
-endif
-
 gct_tool_LDADD = \
-  $(PROVIDED_GWEN_LIB) \
+  $(top_builddir)/src/$(gwenhywfar_internal_libname) \
   $(PROG_LIBRARIES)
 
