@@ -6,5 +6,5 @@ bin_PROGRAMS=typemaker
 noinst_HEADERS=args.h typemaker_p.h
 typemaker_SOURCES=args.c main.c phc.c lhc.c ahc.c code_c.c
 typemaker_LDADD = \
-  $(top_builddir)/src/libgwenhywfar.la \
+  $(top_builddir)/src/$(gwenhywfar_internal_libname) \
   $(PROG_LIBRARIES)
